--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
-  width: 50vh;
+  width: 30vw;
   margin: auto;
   display: flex;
   align-items: center;
@@ -16,8 +16,14 @@
   z-index: 0;
 }
 
-@media screen and (min-width: 270px) and (max-width: 550px) {
+@media screen and (max-width: 500px) {
   .container {
-    width: 100%;
+    width: 95%;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 992px) {
+  .container {
+    width: 75%;
   }
 }
